# nekro-agent

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .env.prod  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_Advanced.md  README_Extensions.md  README_en.md  build_sandbox_image.sh  docker-compose-x-napcat.yml  docker-compose.yml  docker-entrypoint.sh  dockerfile  pyproject.toml  quick_start.sh  quick_start_x_napcat.sh  run_bot.py  sandbox.sh  test_bilibili_adapter.py
.claude/: settings.local.json
.cursor/plans/: i18n-refactoring-plan.md
.cursor/rules/: backend-rules.mdc  frontend-rules.mdc  frontend-theme-guidelines.mdc  frontend-url-navigation.mdc  global.mdc  plugin-rules.mdc  sse-system-events.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_report.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  feature.md
.github/workflows/: OSS Sync.yaml  commit.yml  preview.yml  publish-docker.yml  publish.yml
DockerSp/: checksums.txt  docker-compose-Darwin-x86_64.tgz.sha256  docker-compose-darwin-aarch64.sha256  docker-compose-darwin-x86_64.sha256  docker-compose-linux-aarch64.sha256  docker-compose-linux-armv6.sha256  docker-compose-linux-armv7.sha256  docker-compose-linux-ppc64le.sha256  docker-compose-linux-riscv64.sha256  docker-compose-linux-s390x.sha256  docker-compose-linux-x86_64.sha256  docker-compose-windows-aarch64.exe.sha256  docker-compose-windows-x86_64.exe.sha256
docker/: .env.example  docker-compose-x-napcat.yml  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh  install_i18n.sh  quick_start.sh  quick_start_cn.sh  quick_start_x_napcat.sh  quick_start_x_napcat_cn.sh  wrpinstall.sh  wrtinstall.sh  wslinstall.ps1
docs/: Architecture.md  Extension_Development.md  Extension_Development_For_Windows.md  Plugin_Router_Changes_Checklist.md  Plugin_Router_Design.md  Plugin_Router_Final_Summary.md  Plugin_Router_Implementation_Issues.md  README_Advanced.md  README_Extensions.md  REFACTOR_SUMMARY.md  adapter-development-guide.md  design-note.md
extensions/: acg_image_search.py  ai_voice.py  anime_image_search.py  basic.py  basic_chat.py  dice.py  emo.py  google_search.py  group_honor.py  image_search.py  judgement.py  lolicon_image_search.py  send_email.py  status.py  timer.py  zaobao.py
extensions/artist/: __init__.py  designer.py  stable_diffusion.py
frontend/: .env  .env.development  .env.development.example  .env.production  .prettierrc.json  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
migrations/models/: 0_20260209003607_init.py  10_20260418000000_kb_document_references.py  10_20260418205935_add_kb_tables.py  11_20260524040343_add_adapter_instances.py  12_20260529144420_adjust_renew_default_to_60.py  13_20260616110546_expand_external_platform_ids.py  1_20260209003630_add_workspace_id.py  2_20260221162543_add_workspace_table.py  3_20260222220008_add_workspace_comm_log.py  4_20260314123357_add_memory_tables.py  5_20260314184508_add_memory_episode.py  5_20260323143418_add_observe_mode.py  6_20260323143418_add_observe_mode.py  6_20260326160400_add_email_table.py  7_20260326160400_add_email_table.py  8_20260408220709_kb_support.py  8_20260409124603_kb_rebuildable_search_index.py  8_20260410160719_add_commlog_extra_data.py  9_20260410125635_add_kb_library.py  9_20260416115915_add_workspace_resources.py
nekro_agent/: __init__ copy.py  __init__.py  __init__post.py  app.py
nekro_agent/adapters/: __init__.py  alconna.md  utils.py
nekro_agent/adapters/sse/sdk/: .gitignore  LICENSE  README.md  __init__.py  chunk_receiver.py  client.py  models.py  pyproject.toml  utils.py
nekro_agent/api/: __init__.py  context.py  core.py  i18n.py  llm.py  message.py  plugin.py  recurring_timer.py  schemas.py  signal.py  timer.py  user.py
nekro_agent/core/: __init__.py  args.py  auto_inject_mcp.py  auto_inject_skills.py  avatar_manager.py  bot.py  cc_model_presets.py  config.py  core_utils.py  database.py  db_migration.py  exception_handlers.py  logger.py  notice.py  os_env.py  overridable_config.py  tortoise_config.py  utils.py  vector_db.py
nekro_agent/matchers/: __init__.py  command.py  execute.py  message.py  notice.py  reset.py
nekro_agent/models/: __init__.py  db_adapter_instance.py  db_adapter_instance_event.py  db_adapter_instance_session.py  db_chat_channel.py  db_chat_message.py  db_dashboard_stats.py  db_email.py  db_email_cache.py  db_exec_code.py  db_kb_asset.py  db_kb_asset_binding.py  db_kb_asset_chunk.py  db_kb_asset_reference.py  db_kb_chunk.py  db_kb_document.py  db_kb_document_reference.py  db_mem_entity.py  db_mem_episode.py  db_mem_media_resource.py  db_mem_paragraph.py  db_mem_reinforcement_log.py  db_mem_relation.py  db_plugin_data.py  db_preset.py  db_recurring_timer_job.py  db_user.py  db_workspace.py  db_workspace_comm_log.py  db_workspace_resource.py  db_workspace_resource_binding.py
nekro_agent/routers/: __init__.py  adapters.py  cc_model_presets.py  chat.py  chat_channel.py  commands.py  common.py  config.py  dashboard.py  deployment.py  email.py  events.py  extensions.py  kb_library.py  logs.py  mcp.py  napcat.py  plugin_editor.py  plugins.py  presets.py  resources.py  restart.py  rpc.py  sandbox.py  skills.py  space_cleanup.py  timers.py  tools.py  user.py  user_manager.py  webhook.py  workspace_kb.py  workspaces.py
nekro_agent/schemas/: agent_ctx.py  (+18 more)
sandbox/: .dockerignore  README.md  dockerfile  pyproject.toml
sandbox/nekro_agent_sandbox/: __init__.py
scripts/: db_migrate.py  publish_sdk.py  reset_kb_migrations.sh  run_publish.py  utils.py
tests/: test_at_markup.py  test_basic.py  test_cwe22_path_traversal.py  test_cwe502_rpc_service_pickle.py  test_deployment_client.py  test_deployment_router.py  test_deployment_signer.py  test_emotion_search.py  test_qqbot_openclaw.py  test_shopping_tracker.py
(+718 files in other folders)
