[project]
name = "nekro-agent"
version = "2.3.0"
description = "更智能、更优雅的代理执行 AI"
authors = [{name = "KroMiose", email = "li_xiangff@163.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "Custom License"}
keywords = ["nonebot", "ai", "agent"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pip>=24.0",
    "nonebot2[fastapi]>=2.2.1,<3.0.0",
    "nonebot-adapter-onebot>=2.4.2,<3.0.0",
    "nonebot-adapter-minecraft>=1.8.0,<2.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "httpx[socks]>=0.27.0,<0.28.0",
    "tiktoken>=0.7.0,<1.0.0",
    "docker>=7.1.0,<8.0.0",
    "aiodocker>=0.22.2,<1.0.0",
    "openai>=1.107.0,<1.108.0",
    "openpyxl>=3.1.2,<4.0.0",
    "pillow>=10.4.0,<11.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "bcrypt>=4.2.0,<5.0.0",
    "toml>=0.10.2,<1.0.0",
    "weave>=0.51.19,<1.0.0",
    "tortoise-orm>=0.24.0,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "json5>=0.10.0,<1.0.0",
    "sse-starlette>=2.2.1,<3.0.0",
    "lunar-python>=1.3.12,<2.0.0",
    "tzlocal>=5.2,<6.0",
    "aiosmtplib>=2.0.0,<3.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "python-magic>=0.4.27,<1.0.0",
    "python-magic-bin>=0.4.14,<1.0.0; sys_platform == 'win32'",
    "psutil>=7.0.0,<8.0.0",
    "gitpython>=3.1.44,<4.0.0",
    "qdrant-client>=1.15.0,<1.16.0",
    "mcp>=1.7.0,<2.0.0",
    "pycryptodome>=3.23.0,<4.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "pandas>=2.3.0,<3.0.0",
    "websockets>=15.0.1,<16.0.0",
    "discord-py>=2.5.2,<3.0.0",
    "aiohttp>=3.11.15,<4.0.0",
    "python-telegram-bot>=22.4,<23.0",
    "croniter>=6.0.0",
    "chinesecalendar>=1.11.0",
    "aerich>=0.9.2",
    "lark-oapi>=1.4.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "uvicorn>=0.23.2,<1.0.0",
    "nb-cli>=1.4.0,<2.0.0",
    "ruff>=0.8.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "basedpyright>=1.20.0,<2.0.0",
    "poethepoet>=0.24.0,<1.0.0",
]

[project.scripts]
publish = "scripts.run_publish:main"
publish-sdk = "scripts.publish_sdk:main"
bot = "run_bot:main"

[project.urls]
Homepage = "https://github.com/KroMiose/nekro-agent"
Repository = "https://github.com/KroMiose/nekro-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nekro_agent", "plugins"]

[tool.hatch.build.targets.wheel.force-include]
"run_bot.py" = "run_bot.py"

# ============================================================================
# Tool Configurations
# ============================================================================
[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nekro_agent"]
plugin_dirs = []
builtin_plugins = []

[tool.black]
line-length = 128

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "off"
include = ["nekro_agent"]
exclude = [
    "data",
    "nekro_agent/adapters",
    "plugins",
    "scripts",
    "nekro_agent/schemas/message.py",
]
reportImportCycles = "none"
reportGeneralTypeIssues = "none"
reportUnknownMemberType = "none"
reportAny = "none"
reportPrivateLocalImportUsage = "none"
reportUnusedCallResult = "none"
reportDeprecated = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "provider: real API provider tests (disabled by default; enable with --enable-provider-tests)",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    "nekro_agent/adapters",
    "plugins",
    "scripts",
    "nekro_agent_doc",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E701"]

# Aerich 配置
[tool.aerich]
tortoise_orm = "nekro_agent.core.tortoise_config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./"

# ============================================================================
# Poe 任务配置
# ============================================================================
[tool.poe.tasks]

# 开发运行
[tool.poe.tasks.dev]
help = "启动开发服务器（带热重载，使用 .env.dev）"
cmd = "bot --env=dev --reload"

[tool.poe.tasks.dev-docs]
help = "启动开发服务器（带热重载和 OpenAPI 文档，使用 .env.dev）"
cmd = "bot --env=dev --reload --docs"

# 生产运行
[tool.poe.tasks.start]
help = "启动生产服务器（使用 .env.prod）"
cmd = "bot --env=prod"

# 测试相关
[tool.poe.tasks.test]
help = "运行测试"
cmd = "pytest -v --tb=short"

[tool.poe.tasks.load-test]
help = "运行插件加载测试"
cmd = "bot --load-test"

[tool.poe.tasks.typecheck]
help = "运行类型检查"
cmd = "basedpyright nekro_agent"

[tool.poe.tasks.check]
help = "运行所有检查"
cmd = "bash -c 'poe lint && poe typecheck'"

# 代码质量
[tool.poe.tasks.lint]
help = "运行代码检查"
cmd = "ruff check ."

[tool.poe.tasks.lint-fix]
help = "运行代码检查并自动修复"
cmd = "ruff check --fix ."

[tool.poe.tasks.format]
help = "格式化代码"
cmd = "ruff format ."

[tool.poe.tasks.format-check]
help = "检查代码格式"
cmd = "ruff format --check ."

# 前端任务
[tool.poe.tasks.frontend-install]
help = "安装前端依赖"
cmd = "bash -c 'cd frontend && pnpm install'"

[tool.poe.tasks.frontend-dev]
help = "启动前端开发服务器"
cmd = "bash -c 'cd frontend && pnpm dev'"

[tool.poe.tasks.frontend-build]
help = "构建前端"
cmd = "bash -c 'cd frontend && pnpm build'"

[tool.poe.tasks.frontend-typecheck]
help = "运行前端类型检查"
cmd = "bash -c 'cd frontend && pnpm exec tsc --noEmit'"

[tool.poe.tasks.frontend-lint]
help = "运行前端 lint"
cmd = "bash -c 'cd frontend && pnpm exec eslint src/ --max-warnings 0'"

[tool.poe.tasks.frontend-check]
help = "运行前端检查（typecheck + lint + build）"
cmd = "bash -c 'cd frontend && pnpm exec tsc --noEmit && pnpm exec eslint src/ --max-warnings 0 && pnpm build'"

[tool.poe.tasks.frontend-preview]
help = "预览前端构建"
cmd = "bash -c 'cd frontend && pnpm preview'"

# 依赖管理
[tool.poe.tasks.sync]
help = "同步项目依赖"
cmd = "uv sync"

[tool.poe.tasks.sync-dev]
help = "同步项目依赖（包括开发依赖）"
cmd = "uv sync --all-extras"

[tool.poe.tasks.lock]
help = "更新依赖锁定文件"
cmd = "uv lock"

[tool.poe.tasks.update]
help = "更新所有依赖到最新兼容版本"
cmd = "uv lock --upgrade"

# 数据库迁移
[tool.poe.tasks.db-init]
help = "初始化数据库迁移（新部署仅需执行一次）"
cmd = "aerich init-db --safe"
envfile = ".env.dev"

[tool.poe.tasks.db-revision]
help = "生成数据库迁移文件（用法：poe db-revision <migration_name>）"
cmd = "aerich migrate --name ${name}"
envfile = ".env.dev"

  [[tool.poe.tasks.db-revision.args]]
  name = "name"
  positional = true
  help = "迁移名称（英文，如 add_workspace_table）"

[tool.poe.tasks.db-migrate]
help = "执行数据库迁移（升级版本时执行）"
cmd = "python scripts/db_migrate.py"
envfile = ".env.dev"

# 清理
[tool.poe.tasks.clean]
help = "清理缓存和临时文件"
shell = """
rm -rf .venv
rm -rf .ruff_cache
rm -rf __pycache__
rm -rf .pytest_cache
find . -type d -name "__pycache__" -exec rm -rf {} +
find . -type f -name "*.pyc" -delete
"""

# 进程诊断
[tool.poe.tasks.diagnose]
help = "向运行中的 bot 进程发送 SIGUSR2，dump 所有 asyncio 协程调用栈（用于分析卡死原因）"
shell = """
# uvicorn reload 模式下，asyncio 跑在 multiprocessing spawn 的 worker 子进程里
# 优先找 worker 子进程，找不到再找主进程
PID=$(pgrep -f "multiprocessing.spawn" | grep -v "$$" | head -1)
if [ -z "$PID" ]; then
  PID=$(pgrep -f "bot --env" | grep -v "$$" | head -1)
fi
if [ -z "$PID" ]; then
  echo "未找到运行中的 bot 进程，当前候选进程："
  ps aux | grep -E "bot --env|multiprocessing.spawn|run_bot" | grep -v grep
  exit 1
fi
echo "发送 SIGUSR2 到进程 PID=$PID ..."
echo "协程栈将输出到 bot 进程的 stderr（即 bot 的 tmux 终端）"
kill -USR2 $PID && echo "信号已发送，请查看 bot 终端输出"
"""

[tool.poe.tasks.diagnose-threads]
help = "向运行中的 bot 进程发送 SIGUSR1，dump 所有线程调用栈（用于分析同步阻塞）"
shell = """
PID=$(pgrep -f "multiprocessing.spawn" | grep -v "$$" | head -1)
if [ -z "$PID" ]; then
  PID=$(pgrep -f "bot --env" | grep -v "$$" | head -1)
fi
if [ -z "$PID" ]; then
  echo "未找到运行中的 bot 进程，当前候选进程："
  ps aux | grep -E "bot --env|multiprocessing.spawn|run_bot" | grep -v grep
  exit 1
fi
echo "发送 SIGUSR1 到进程 PID=$PID ..."
echo "线程栈将输出到 bot 进程的 stderr（即 bot 的 tmux 终端）"
kill -USR1 $PID && echo "信号已发送，请查看 bot 终端输出"
"""

# SDK发布
[tool.poe.tasks.build-sdk]
help = "构建SSE SDK包"
shell = """
cd nekro_agent/adapters/sse/sdk
uv build
"""

[tool.poe.tasks.publish-sdk]
help = "发布SSE SDK到PyPI"
cmd = "publish-sdk"

[tool.poe.tasks.clean-sdk]
help = "清理SDK构建文件"
shell = """
cd nekro_agent/adapters/sse/sdk
rm -rf dist build *.egg-info
"""
