[project]
name = "nekro-agent-sandbox"
version = "0.2.0"
description = "Nekro Agent AI 执行沙盒环境"
authors = [{name = "KroMiose", email = "li_xiangff@163.com"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pip>=24.0",
    "matplotlib>=3.9.1,<4.0.0",
    "opencv-python>=4.10.0.84,<5.0.0",
    "numpy>=1.26.4,<2.0.0",
    "scipy>=1.14.0,<2.0.0",
    "scikit-learn>=1.5.1,<2.0.0",
    "imageio>=2.35.0,<3.0.0",
    "pytesseract>=0.3.13,<1.0.0",
    "sympy>=1.13.3,<2.0.0",
    "pymupdf==1.23.8",
    "rarfile>=4.2,<5.0",
    "markdown>=3.7,<4.0",
    "pandas>=2.2.3,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "docx>=0.2.4,<1.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "mplfonts>=0.0.8,<1.0.0",
    "networkx>=3.4.2,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
