[project]
name = "nekro-agent-sse-sdk"
version = "1.0.0"
description = "SSE客户端SDK，用于与NekroAgent SSE适配器通信"
authors = [{name = "KroMiose", email = "li_xiangff@163.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
keywords = ["sse", "nekro-agent", "client", "sdk", "server-sent-events"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "httpx>=0.27.0,<0.28.0",
    "loguru>=0.7.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/KroMiose/nekro-agent"
Repository = "https://github.com/KroMiose/nekro-agent"
Documentation = "https://github.com/KroMiose/nekro-agent/tree/main/nekro_agent/adapters/sse/sdk"
Issues = "https://github.com/KroMiose/nekro-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

